# LangChainDemo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  ROADMAP.md  TASKS.md  mcp_servers.json  pyproject.toml  test_ds.py
.claude/: settings.local.json
data/knowledge/: goose_analysis.md  hermes_agent_analysis.md  langchain_basics.md  openai_proxy.md  rag_basics.md
data/skills/code_review/: SKILL.md
data/skills/summarize/: SKILL.md
data/skills/translate/: SKILL.md
src/chainmaster/: agent.py  cli.py  config.py  logging_utils.py  openai_support.py  prompting.py  providers.py
src/chainmaster/knowledge/: __init__.py  memory.py  rag.py
src/chainmaster/mcp/: __init__.py  adapter.py  client.py
src/chainmaster/mcp/server/: __init__.py  __main__.py  filesystem.py  graph.py  memory.py
src/chainmaster/memory/: __init__.py  compaction.py  store.py
src/chainmaster/skills/: __init__.py  handlers.py  loader.py  registry.py
src/chainmaster/tools/: __init__.py  markitdown.py  web_search.py
src/chainmaster/weather/: chain.py  handlers.py  memory.py  service.py  structured.py  tracing.py
src/jeecglangchain/: config.py  openai_support.py  prompting.py
src/langchaindemo/: agent.py  cli.py  config.py  data_analysis.py  document_qa.py  knowledge.py  logging_utils.py  markitdown_tool.py  openai_support.py  providers.py  rag.py  translate.py  unified_agent.py  weather.py  weather_chain.py  weather_graph.py  weather_langchain.py  weather_memory.py  weather_multi_tool.py  weather_streaming.py  weather_structured.py  weather_tracing.py  web_search.py
src/langchaindemo/knowledge/: handlers.py  loader.py
src/langchaindemo/tools/: __init__.py  data_analysis.py  document_qa.py  handlers.py  translate.py
src/langchaindemo/weather/: __init__.py  agent.py  graph.py  handlers.py  multi_tool.py  streaming.py
tests/: conftest.py  test_weather.py  test_weather_chain.py  test_weather_langchain.py  test_weather_structured.py
