[project]
name = "LangChainDemo"
version = "0.1.0"
description = "A uv-based LangChain starter project"
readme = "README.md"
authors = [
    { name = "shuo li", email = "lishuo@dachkj.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "cryptography>=46.0.7",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.30",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.13",
    "langchain-tavily>=0.2.18",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyjwt>=2.12.1",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
langchaindemo = "langchaindemo:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
